Fixed modal social menu overflowing its bounds in IE11

--- a/style.css
+++ b/style.css
@@ -2148,6 +2148,10 @@ button.sub-menu-toggle.active svg {
 	padding: 4rem 0;
 }
 
+.menu-bottom nav {
+	width: 100%;
+}
+
 .menu-copyright {
 	display: none;
 	font-size: 1.6rem;
